--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -12,9 +12,9 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "stromweld/windows-2022"
-  config.vm.box_version = "202206.16.0"
-  config.vm.box_url = "https://vagrantcloud.com/stromweld/windows-2022"
+  config.vm.box = "StefanScherer/windows_2022"
+  #config.vm.box_version = "v2102.0.2205"
+  config.vm.box_url = "https://vagrantcloud.com/StefanScherer/windows_2022"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -25,7 +25,7 @@ Vagrant.configure("2") do |config|
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
   # NOTE: This will enable public access to the opened port
-  # config.vm.network "forwarded_port", guest: 80, host: 8080
+  config.vm.network "forwarded_port", guest: 3389, host: 53389
 
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine and only allow access
@@ -45,29 +45,33 @@ Vagrant.configure("2") do |config|
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
-  # config.vm.synced_folder "../data", "/vagrant_data"
+  config.vm.synced_folder "data", "/data"
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
   #
-  # config.vm.provider "virtualbox" do |vb|
-  #   # Display the VirtualBox GUI when booting the machine
-  #   vb.gui = true
-  #
-  #   # Customize the amount of memory on the VM:
-  #   vb.memory = "1024"
-  # end
+  config.vm.provider "virtualbox" do |vb|
+    # Display the VirtualBox GUI when booting the machine
+    vb.gui = false
+    # Customize the number of processors
+    vb.cpus = 2
+    # Customize the amount of memory on the VM:
+    vb.memory = "2048"
+  end
   #
   # View the documentation for the provider you are using for more
   # information on available options.
 
-  # Enable provisioning with a shell script. Additional provisioners such as
-  # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
-  # documentation for more information about their specific syntax and use.
-  # config.vm.provision "shell", inline: <<-SHELL
-  #   apt-get update
-  #   apt-get install -y apache2
-  # SHELL
-  # config.vm.provision "shell", path: "bootstrap.sh"
+  # provisioning with a powerhsell script
+  config.vm.provision "shell" do |shell|
+    shell.privileged = true
+    shell.path =  "data/bootstrap.ps1"
+    shell.reboot = true
+  end
+  # validate docker install
+  config.vm.provision "docker" do |doc|
+    doc.pull_images "hello-world:nanoserver"
+    doc.run "hello-world:nanoserver"
+  end
 end
